# real-estate-RAG

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
data/: property-1.TXT  property-10.TXT  property-11.TXT  property-12.TXT  property-13.TXT  property-14.TXT  property-15.TXT  property-16.TXT  property-17.TXT  property-18.TXT  property-19.TXT  property-2.TXT  property-20.TXT  property-21.TXT  property-22.TXT  property-23.TXT  property-24.TXT  property-25.TXT  property-3.TXT  property-4.TXT  property-5.TXT  property-6.TXT  property-7.TXT  property-8.TXT  property-9.TXT
src/documents_ingestion/: document_processor.py
src/graph_builder/: graph_builder.py
src/nodes/: nodes.py  react_agent.py  retriever_node.py
src/state/: evaluation_state.py  rag_state.py
src/vectorstore/: vectorstore.py
